--- a/src/Navbar/index.css
+++ b/src/Navbar/index.css
@@ -10,12 +10,14 @@
     display: block;
     color: black;
     text-align: center;
-    padding: 18px 20px;
+    padding: 17px 20px;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 21px;
   }
+ 
   
   .nav{float: right;}
+
   .topnav a:hover {
     background-color: #ddd;
     color: black;
@@ -25,7 +27,7 @@
    
     color: black;
     font-weight: bolder;
-    font-size: larger;
+    font-size: 27px;
   }
   
   .search-container {
@@ -35,19 +37,46 @@
   }
   
   .topnav input[type=text] {
-    padding: 6px;
-    margin-top: 8px;
+    padding: 8px;
+    margin-top: 5px;
     font-size: 17px;
     border: none;
+    background-color: rgb(231, 223, 223);
   }
   
- 
-  .topnav.search-container button:hover {
-    background: #8b7d7d;
+  .topnav .search-container button {
+    float: right;
+    padding: 2px 10px;
+    margin-top: 7px;
+    margin-right: 16px;
+    background: #fffefe;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
   }
+  
+  .custom-icon-style {
+    font-size: 25px;
+    color: rgb(8, 8, 8);
+    
+  }
+  
   
   .right {
     float: right;
+  }
+ 
+  button{
+    margin-top: 6px;
+    margin-left: 5px;
+    
+   
+    color: white;
+    
+ 
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-size: 25px;
   }
   
   @media screen and (max-width: 600px) {
