--- a/src/landingpage/index.css
+++ b/src/landingpage/index.css
@@ -1,41 +1,41 @@
 .landing-page{
     display: flex;
     align-items: center;
-    
     background-color: #b3f8d5;
 }
 h4{
     font-weight: bold;
-    color: rgb(30, 105, 7);
+    color: rgb(24, 87, 5);
     font-size: xx-large;
 }
 .landing-left{
-    margin: 5%;
-    
+    margin-right: 8%;
+  
 }
 .landing-image{
-    object-fit: fill;
-    width: 660px;
-    margin-left: 20px;
+    object-fit:cover;
+    width: 700px;
+    
 }
 .landing-right{
-    margin:4%;
-    padding-left: 5%;
+  margin: 3%;
+    margin-left: 9%;
+    
 }
 h1{
     flex-wrap: wrap;
-    font-size: 56px;
+    font-size: 50px;
     color: black;
 }
 .p{
     color: grey;
-    font-size: 25px;
+    font-size: 30px;
 }
-button {
+.button1 {
   
 
     margin-left: 40px;
-    padding: 10px 20px; 
+    padding: 20px 20px; 
     font-size: 16px;
     background-color: #074d2a;
     color: white;
@@ -43,5 +43,6 @@ button {
     border-radius: 25px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    font-size: 20px;
   
 }
